manifests/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/issue-temporary-certificate: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
  name: argocd-server
  namespace: argocd
spec:
  rules:
    - host: cd.pauljs.io
      http:
        paths:
          - pathType: Prefix
            path: "/*"
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
  tls:
    - hosts:
        - cd.pauljs.io
      secretName: argocd-server-cert
